# rolevate

./: .gitignore  ROLEVATE_APPLICATIONS_REPORT.md  ROLEVATE_PLATFORM_v1.0_RELEASE_REPORT.md  package-lock.json  package.json
admin-rolevate/: #script#  #serve#  .env.example  .gitignore  BRANDING.md  README.md  STRUCTURE.md  package.json  reboot_script.sh  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.js  vite.config.ts
fastapi/: .env.example  .gitignore  JOB_POST_AGENT_README.md  README.md  README_COMPLETE.md  SESSION_MANAGEMENT_README.md  SQL_VS_JSON_COMPARISON.md  WHATSAPP_WEBHOOK_SETUP.md  activate.sh  conversational_job_console.py  demo_job_post_agent.py  ecosystem.config.js  frontend_session_demo.html  get_actual_templates.py  interactive_job_console.py  job_post_console.py  main.py  main_simple.py  main_updated.py  migrate_sessions_to_sql.py  requirements.txt  sessions.db  show_extracted_data.py  simple_job_test.py  start_server.sh  test_agent_setup.py  test_ai_endpoint.py  test_ai_prompt_generation.py  test_backend_api.py  test_backend_api_with_args.py  test_completion.py  test_conversational_agent.py  test_cv_analysis.py  test_cv_analysis_with_args.py  test_cv_notification.py  test_direct_api.py  test_enhancement_feature.py  test_exact_conversation.py  test_final_agent.py  test_final_comprehensive.py  (+25 more)
interview/: interview.service.ts
livekit/: .dockerignore  .env.example  .gitignore  Dockerfile  PRODUCTION_SETUP_GUIDE.md  README.md  STARTUP_CONFIG.md  agent-manager.sh  agent.py  agent1.py  agent15-manager.sh  agent15-startup.sh  agent6.py  agent_best_practice.py  agent_control.sh  agenttest.py  aws_public_setup.md  config.py  configure-production-mac.sh  create_db.sh  custom_tts.py  db_logic.py  docker-compose.server.yml  docker-compose.yml  docker-manage.sh  ecosystem-agent15.config.js  ecosystem.config.js  livekit-agent.service  (+20 more)
rolevate-interview/v2/: .gitignore  AGENT_IMPROVEMENTS.md  CHANGELOG.md  MIGRATION.md  PERFORMANCE.md  README.md  agent.py  apply_performance.sh  config.py  exceptions.py  models.py  orchestrator.py  pyproject.toml  requirements.txt  setup.sh
rolevate-interview/v2/scripts/: health_check.sh  pre_commit.py
rolevate-interview/v2/service/: application_service.py  interview_service.py  recording_service.py
rolevate-interview/v2/tests/: conftest.py  test_exceptions.py  test_models.py  test_room_parser.py
rolevate-interview/v2/tools/: application_info.py
rolevate-interview/v2/utils/: logging_config.py  room_parser.py
(+2692 files in other folders)
